<resources>
    <string name="app_name">Furniture Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="right_address">The Right Address For Shopping Anyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproduct on the internet</string>
    <string name="name_app">Furniture.</string>
    <string name="let_s_login">Let\'s Register</string>
    <string name="title_login">Don\'t have an account? Register now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="see_product">See product</string>
</resources>